--- a/main.html
+++ b/main.html
@@ -1,3 +1,6 @@
+<?php
+include("index.php");
+?>
 <html>
 <head>
     <title> Eccomerce Website for Jewels by 20pw05 and 20pw35</title>
@@ -28,8 +31,8 @@
                     <li> <a href="#main" class="items"> HOME </a> </li>
                     <li> <a href="#NEWARRIVALS" class="items"> NEW ARRIVALS</a> </li>
                     <li> <a href="#rings" class="items"> RINGS </a> </li>
-                    <li> <a href="#NEWARRIVALS" class="items"> BANGLES</a> </li>
-                    <li> <a href="#earings" class="items"> EARINGS </a> </li>
+                    <li> <a href="#bangles" class="items"> BANGLES</a> </li>
+                    <li> <a href="#earing" class="items"> EARINGS </a> </li>
                     <li> <a href="#necklace" class="items"> NECKLACE </a> </li>
                 </ul>
             </nav>
@@ -44,23 +47,22 @@
         </div>
         <div class="slideimage">
             <img src="pictures/bgimage.png" class="image mySlides">
-            <img src="pictures/bgimage-2.jpg" class="image myslides">
-            <img src="pictures/ring1.jpg" class="image myslides">
+            <img src="pictures/bgimage-5.png" class="image myslides">
+            <img src="pictures/bgimage-3.png" class="image myslides">
+            <img src="pictures/bgimage-4.png" class="image myslides">
             <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
             <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         </div>
 
         <script src="index.js"></script>
 
-        <a name="NEWARRIVALS">
-            <p class="heading"> NEW ARRIVALS </p>
-        </a>
+        <a name="NEWARRIVALS">  <p class="heading"> NEW ARRIVALS </p>  </a>
         <div class="newarrivals">
             <div class="enlarge">
                 <div class="outerbox1">
                     <img src="pictures/braclets.png" class="images">
                     <p> 3 in 1 BRACELET <br> 500Rs </p>
-                    <div class="addtocart"> ADD TO CART </div>
+                    <div class="addtocart" > ADD TO CART </div>
                 </div>
             </div>
             <div class="enlarge">
@@ -130,7 +132,7 @@
                 <div class="enlarge">
                     <div class="outerbox1">
                         <img src="pictures/ring4.png" class="images">
-                        <p> BRIGHT LIGHTS RING<br> 2,999Rs </p>
+                        <p> BRIGHT LIFE RING<br> 2,999Rs </p>
                         <div class="addtocart"> ADD TO CART </div>
                     </div>
                 </div>
@@ -255,7 +257,7 @@
             </div>
         </div>
 
-        <a name="Earings">
+        <a name="earing">
             <p class="heading"> EARINGS </p>
         </a>
 
@@ -416,7 +418,23 @@
                 </div>
             </div>
         </div>
-        <br>
+
+        <div class="flip-box">
+            <div class="flip-box-inner">
+              <div class="flip-box-front">
+                <img src="pictures/neklace5.png" class="images">
+              </div>
+              <div class="flip-box-back">
+                <h2>MANGA ORANGE</h2>
+                <p> NAME: MANGA ORANGE <br> 
+                    PRICE : 8,000Rs <br>
+                    Only 3 stocks left <br>
+                    <div class="addtocart"> ADD TO CART </div> </p>
+              </div>
+            </div>
+          </div>
+
+
         <div class="footer-content">
             <h3>KAVITHALAYA</h3>
             <p>Our story unfolds over nine decades — driven by the pursuit of craft, a fixation with detail and a
