--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 include("index.php");
 ?>
 <html>
+
 <head>
     <title> Eccomerce Website for Jewels by 20pw05 and 20pw35</title>
     <link rel="stylesheet" href="styles.css">
@@ -56,13 +57,55 @@ include("index.php");
 
         <script src="index.js"></script>
 
-        <a name="NEWARRIVALS">  <p class="heading"> NEW ARRIVALS </p>  </a>
+        <div class="categories">
+            <p class="inspired"> GET INSPIRED </p>
+            <div class="flip-box">
+                <div class="flip-box-inner">
+                    <div class="flip-box-front">
+                        <img src="pictures/getinspired1.png" class="ig">
+                    </div>
+                    <div class="flip-box-back">
+                        <p style="color: black; font-size:30px; text-align:left; font-style: italic;">
+                            <b>NAME :</b>Yellow Chimes<br>
+                            <b>PRICE :</b> 350 Rs <br>
+                            <b>DESCRIPTION :</b> Adjustable Ring for Women and Girls <br>
+                            It can be worn with all kind of Outfits
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="flip-box1">
+                <div class="flip-box1-inner">
+                    <div class="flip-box1-front">
+                        <img src="pictures/getinspired2.png" class="ig">
+                    </div>
+                    <div class="flip-box1-back">
+                        <p style="color: black; font-size:30px; text-align:left; font-style: italic;">
+                            <b>NAME :</b>Trendy Pearl<br>
+                            <b>PRICE :</b> 550 Rs <br>
+                            <b>DESCRIPTION :</b> Trendy Pearl earrings are Perfect for Daily wear, College Wear or even Party Wear.<br>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="Discription">
+                <p class="inspired1">
+                    Whether you’re treating yourself or celebrating something special,
+                    <br>
+                     our inspiring selection of high-quality designs means you’ll 
+                     <br>always find just the right thing.</p>
+            </div>
+        </div>
+
+        <a name="NEWARRIVALS">
+            <p class="heading"> NEW ARRIVALS </p>
+        </a>
         <div class="newarrivals">
             <div class="enlarge">
                 <div class="outerbox1">
                     <img src="pictures/braclets.png" class="images">
                     <p> 3 in 1 BRACELET <br> 500Rs </p>
-                    <div class="addtocart" > ADD TO CART </div>
+                    <div class="addtocart"> ADD TO CART </div>
                 </div>
             </div>
             <div class="enlarge">
@@ -418,22 +461,6 @@ include("index.php");
                 </div>
             </div>
         </div>
-
-        <div class="flip-box">
-            <div class="flip-box-inner">
-              <div class="flip-box-front">
-                <img src="pictures/neklace5.png" class="images">
-              </div>
-              <div class="flip-box-back">
-                <h2>MANGA ORANGE</h2>
-                <p> NAME: MANGA ORANGE <br> 
-                    PRICE : 8,000Rs <br>
-                    Only 3 stocks left <br>
-                    <div class="addtocart"> ADD TO CART </div> </p>
-              </div>
-            </div>
-          </div>
-
 
         <div class="footer-content">
             <h3>KAVITHALAYA</h3>
