--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@ include("index.php");
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-</head>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+</head>
 <body>
     <div class="body">
         <div class="top">
@@ -19,9 +19,9 @@ include("index.php");
             <img src="pictures/gmail.png" width="2%"> <span style="padding:0px 5px 0px 5px ;">
                 Kavithalaya_2003@gmail.com </span>
             <span style="margin:100px;"> <b> <i> Free Shipping on Orders Over Rs2000 and Free Returns </i> </b></span>
-            <span class="login"> <a href="login.php" style="color:black;"> Login </a> </span>
+            <span class="login"> <a href="login.html" style="color:black;"> Login </a> </span>
             <span class="horizontal"> </span>
-            <span class="signup"> <a href="signup.php" style="color:black;"> Sign up </a> </span>
+            <span class="signup"> <a href="signup.html" style="color:black;"> Sign up </a> </span>
         </div>
         <div class="top1">
             <img src="pictures/logo1.png" class="logo">
@@ -36,14 +36,11 @@ include("index.php");
                     <li> <a href="#bangles" class="items"> BANGLES</a> </li>
                     <li> <a href="#earing" class="items"> EARINGS </a> </li>
                     <li> <a href="#necklace" class="items"> NECKLACE </a> </li>
+                    <li> <a href="#custom" class="items"> CUSTOMIZE </a> </li>
                 </ul>
             </nav>
-            <a href="#">
-                <img src="pictures/love.png"
-                    style="position:absolute; top :110px; right:150px; width:3%; filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.5)); ">
-            </a>
-            <a href="#">
-                <img src="pictures/CAART.png"
+            <a href="cart.html">
+                <img src="pictures/CAART.png" id="cart-icon"
                     style="position:absolute; top :110px; right:50px; width:3%; filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.5));">
             </a>
         </div>
@@ -382,7 +379,7 @@ include("index.php");
                         <button type="button" class="btn btn-light btn-rounded addtocart">ADD TO CART</button>
                     </div>
                 </div>
-
+                <a name="custom"> </a>
 		<div class="categories">
             <p class="inspired"> DESIGN YOUR OWN JEWELLRY!! </p><br>
 				<img src="pictures/pay.png" class="images" width="500px">
