--- a/signup.html
+++ b/signup.html
@@ -86,7 +86,7 @@ button{
     <div class="signup-box">
       <h1>Sign Up</h1>
       <h4>Sign up to order the latest collection from us </h4>
-      <form>
+      <form name="f1" action = "main.html" onsubmit = "return validation()" method = "POST"> 
         <label>First Name</label>
         <input type="text"  required placeholder="Enter your First name">
         <label>Last Name</label>
@@ -97,7 +97,7 @@ button{
         <input type="password" minlength="9" required placeholder="Enter Your Password">
         <label>Confirm Password</label>
         <input type="password" minlength="9" required placeholder="Enter Your Password">
-        <button> <a href="try3.html" class="submit"> Submit </a> </button>
+        <button> <a href="main1.html" class="submit"> Submit </a> </button>
       </form>
       <p>
         By clicking the Sign Up button,you agree to our <br />
